# minecraft-clone

./: .clang-format  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
assets/shaders/: block_entity.frag  block_entity.vert  block_icon.frag  block_icon.vert  celestial.frag  celestial.vert  chunk.frag  chunk.vert  entity_model.frag  entity_model.vert  model_block.vert  outline.frag  outline.vert  particle.frag  particle.vert  sky.frag  sky.vert  viewmodel.frag  viewmodel.vert
cmake/: ProjectDefaults.cmake
docs/: ARCHITECTURE.md  HANDOFF.md  PERFORMANCE.md  PERFORMANCE_RND.md
docs/mods/: BUILDCRAFT_GUIDE.md  INDUSTRIALCRAFT_GUIDE.md  INTEGRATION_SPEC.md  MOD_INTEGRATION.md
engine/: CMakeLists.txt
engine/src/vox/audio/: AudioEngine.cpp  AudioEngine.h
engine/src/vox/core/: Application.cpp  Application.h  Assert.h  Assets.cpp  Assets.h  Log.cpp  Log.h  ThreadPool.cpp  ThreadPool.h
engine/src/vox/platform/: Input.cpp  Input.h  KeyCodes.h  Window.cpp  Window.h
engine/src/vox/renderer/: BoxModel.cpp  BoxModel.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  Frustum.h  MeshPool.cpp  MeshPool.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureArray.cpp  TextureArray.h  UiRenderer.cpp  UiRenderer.h  VertexArray.cpp  VertexArray.h
game/: CMakeLists.txt
game/src/: Crafting.cpp  Crafting.h  FlyCamera.cpp  FlyCamera.h  GameApp.cpp  GameApp.h  HumanoidModel.cpp  HumanoidModel.h  InputState.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Main.cpp  Particles.cpp  PigModel.cpp  Player.cpp  Player.h  ViewModel.cpp  ViewModel.h
game/src/audio/: Sounds.cpp  Sounds.h
game/src/entity/: ArrowModel.cpp  ArrowModel.h  ChickenModel.cpp  ChickenModel.h  CowModel.cpp  CowModel.h  CreeperModel.cpp  CreeperModel.h  Entity.h  EntityManager.cpp  EntityManager.h  Explosion.cpp  HeldBowModel.cpp  HeldBowModel.h  HumanoidModel.cpp  HumanoidModel.h  Mob.cpp  Mob.h  MobModel.h  PigModel.cpp  PigModel.h  Player.cpp  Player.h  Projectile.cpp  SheepModel.cpp  SheepModel.h  SpiderModel.cpp  SpiderModel.h
game/src/item/: Crafting.cpp  Crafting.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h
game/src/render/: Particles.cpp  Particles.h  PlayerDoll.cpp  PlayerDoll.h  ViewModel.cpp  ViewModel.h
game/src/ui/: BlockIcons.cpp  BlockIcons.h  Hud.cpp  Hud.h  InventoryScreen.cpp  InventoryScreen.h  PauseMenu.cpp  PauseMenu.h  TitleScreen.cpp  TitleScreen.h  Widgets.cpp  Widgets.h
game/src/world/: Block.cpp  Block.h  CaveGen.cpp  CaveGen.h  Chunk.h  ChunkMesher.cpp  ChunkMesher.h  Furnace.cpp  Furnace.h  JavaRandom.h  LakeGen.cpp  LakeGen.h  Light.h  LightEngine.cpp  LightEngine.h  Mob.cpp  Mob.h  OreGen.cpp  OreGen.h  RedstoneEngine.cpp  RedstoneEngine.h  TerrainGen.cpp  TerrainGen.h  Visibility.h  World.cpp  World.h  WorldSave.cpp  WorldSave.h
game/tests/: GenTest.cpp  SaveTest.cpp
scripts/: build.ps1  check_sizes.ps1  gen_font.py  gen_textures.py  import_mc_assets.py
